yaml/peer-authentication-mesh-mtls.yaml
# this forces the whole mesh to mTLS only
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
