yaml/ksvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    serving.knative.openshift.io/enablePassthrough: "true"
  name: svc-always-scaled
  namespace: demo
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - env:
            - name: RESPONSE
              value: Hello Serverless!
          image: docker.io/openshift/hello-openshift
